# sharework-assessment

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: matching_base.sqlite3  out.csv.2h_fromcsv_notstrict  out.csv.3h_fromcsv_strict
sharework/: __init__.py
sharework/backend/: __init__.py  models.py  views.py
sharework/matching/: __init__.py  criterion.py  loader.py  matcher.py  model.py  persistence.py
sharework/resources/: logging.config
sharework/resources/sql/: 0_init_matches_table.sql
tests/: __init__.py
tests/backend/: test_models.py  test_views.py
tests/matching/: test_criterion.py  test_loader.py  test_matcher.py
tests/resources/backend/: init_test_db.sql
tests/resources/matching/: dataset.csv  dataset.sqlite
